# fluency

./: .gitignore  README.md  consts.py  plan.md  pyproject.toml
configs/: example.toml  system_prompt.txt
models/: agent_model.py  compliance_evaluator.py  perplexity_evaluator.py  target_model.py  toxicity_evaluator.py
schemas/: config_schemas.py  io_schemas.py
tests/: test_integration.py  test_schemas.py  test_scoring.py
train/: engine.py  trainer.py
